# big-brain

./: Cargo.toml
derive/: Cargo.toml
derive/src/: lib.rs
examples/: concurrent.rs  custom_measure.rs  farming.rs  one_off.rs  sequence.rs  thirst.rs
src/: action.rs  choices.rs  evaluator.rs  evaluators.rs  lib.rs  measures.rs  pickers.rs  scorer.rs  scorers.rs  sequence.rs  thinker.rs
src/action/: concurent.rs  steps.rs
tests/: derive_action.rs  derive_scorer.rs  steps.rs
