[package]
name = "big-brain"
version = "0.18.0"
authors = ["Kat Marchán <kzm@zkat.tech>"]
edition = "2021"
description = "Rusty Utility AI library"
license = "Apache-2.0"
readme = "README.md"
keywords = ["utility-ai", "bevy", "ai", "ecs"]
categories = ["game-development"]
repository = "https://github.com/zkat/big-brain"
homepage = "https://github.com/zkat/big-brain"

[workspace]

[dependencies]
bevy_ecs = { version = "0.14" }
bevy_hierarchy = { version = "0.14" }
bevy_reflect = { version = "0.14" }
bevy_asset = { version = "0.14" }
bevy_app = { version = "0.14" }
bevy_utils = { version = "0.14" }
bevy_log = { version = "0.14" }
big-brain-derive = { version = "=0.18.0", path = "./derive" }

[dev-dependencies]
bevy = { version = "0.14", default-features = true }
rand = { version = "0.8.5", features = ["small_rng"] }
bevy-scene-hook = "10.0.0"

[features]
trace = []
